--- a/lamp.html
+++ b/lamp.html
@@ -9,13 +9,12 @@
   <body>
     <div class="lava-lamp">
       <div class="lamp-top"></div>
-      <div class="lamp-glass">
-        <div class="lava">
-          <div class="blob blob1"></div>
-          <div class="blob blob2"></div>
-          <div class="blob blob3"></div>
-        </div>
+      <div class="lava">
+        <div class="blob blob1"></div>
+        <div class="blob blob2"></div>
+        <div class="blob blob3"></div>
       </div>
+      <div class="lamp-top reversed"></div>
       <div class="lamp-bottom"></div>
     </div>
   </body>
